# maghemite

./: .gitignore  Cargo.toml  README.md  clippy.toml  justfile  package-manifest.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: renovate.json
.github/buildomat/: config.toml  test-common.sh  test-ddm-common.sh
.github/workflows/: mac.yml  (+1 more)
bfd/: Cargo.toml  README.adoc
bfd-async/: Cargo.toml
bfd-sans-io/: Cargo.toml
bfd-sans-io/src/: daemon.rs  dispatcher.rs  lib.rs  session.rs  single_hop_egress_src_port.rs  sm.rs
bfd-sans-io/src/dispatcher/: proptests.rs
bfd-sans-io/src/session/: tests.rs
bfd-sans-io/src/sm/: tests.rs
bfd-types/: Cargo.toml
bfd/cli/: Cargo.toml
bfd/cli/src/: main.rs
bfd/client/: Cargo.toml
bfd/client/src/: lib.rs
bfd/daemon/: Cargo.toml
bfd/daemon/src/: admin.rs  main.rs  udp.rs
bfd/lib/: Cargo.toml
bfd/lib/src/: lib.rs  packet.rs
bfd/openapi/: admin.json
bfd/peer-test-config/: vyos.vbash
bfd/src/: bidi.rs  lib.rs  log.rs  packet.rs  sm.rs  sm_sans_io.rs  util.rs
bfd/src/sm_sans_io/: tests.rs
bgp/: Cargo.toml
bgp-admin-client/: Cargo.toml
bgp-types/: Cargo.toml
bgp/data/: qsfp0-apply.json  qsfp0-clear.json  qsfp1-apply.json  qsfp1-clear.json
bgp/policy/: policy-check0.rhai  policy-shape0.rhai  shape-prefix0.rhai
bgp/proptest-regressions/: proptest.txt
bgp/src/: announcer.rs  bgp_stream.rs  broker.rs  clock.rs  config.rs  connection.rs  connection_channel.rs  connection_tcp.rs  dispatcher.rs  error.rs  fanout.rs  lib.rs  log.rs  messages.rs  params.rs  policy.rs  proptest.rs  rhai_integration.rs  router.rs  session.rs  state.rs  test.rs  unnumbered.rs  unnumbered_mock.rs
bgpadm/: Cargo.toml
bgpadm/src/: main.rs
bgpd/: Cargo.toml
bgpd/src/: admin.rs  main.rs
clab/: .gitignore  cdn-set-config.sh  cdn.json  get-bgp.sh  get-imported.sh  get-rib.sh  lab-init.sh  mgadm  mgd-addr.sh  mgd-setup-bad-asn.sh  mgd-setup-ibgp.sh  mgd-setup.sh  oxpop.clab.yml  pceast-set-config.sh  pceast.json  pcloud-set-config.sh  pcwest-set-config.sh  pcwest.json  run-mgd.sh  srlinux-set-med-cli.txt  transit-ibgp.json  transit-set-config-ibgp.sh  transit-set-config.sh  transit.json
client-common/: Cargo.toml
console/: Cargo.toml
ddm/: Cargo.toml
ddm-admin-client/: Cargo.toml  build.rs
ddm-admin-client/src/: lib.rs
ddm-api/: Cargo.toml
ddm-api-types/: Cargo.toml
ddm-api/src/: lib.rs
ddm-apigen/: Cargo.toml
ddm-illumos/: Cargo.toml
ddm-local/: Cargo.toml  README.md
ddm-local/src/: main.rs
ddm-next/: Cargo.toml
ddm-next-admin-client/: Cargo.toml
ddm-openapi/: ddm-admin.json
ddm-protocol/: Cargo.toml
ddm-types/: Cargo.toml
ddm/src/: admin.rs  config.rs  db.rs  discovery.rs  exchange.rs  illumos.rs  lib.rs  local.rs  mcast.rs  mimos.rs  net.rs  oxstats.rs  peer.rs  platform.rs  platform2.rs  port.rs  protocol.rs  rdp.rs  router.rs  rpx.rs  sm.rs  sys.rs  util.rs
ddm/src/discovery/: mod.rs  runtime.rs
ddm/src/exchange/: ddm_v2.rs  mod.rs  reconcile.rs  runtime.rs
ddm/src/illumos/: main.rs
ddm/src/local/: main.rs
ddm/src/sm/: mod.rs  state.rs
ddm/tests/output/: ddm_v2_protocol.json
ddm2/: Cargo.toml
ddmadm/: Cargo.toml
ddmadm-next/: Cargo.toml
ddmadm-next/src/: main.rs
ddmadm/src/: main.rs
ddmd/: Cargo.toml
ddmd-next/: Cargo.toml
ddmd-next/src/: main.rs
ddmd/src/: main.rs  signal.rs  smf.rs
docs/: bgp-architecture.md  bgp-unnumbered.md  developer-guide.md  types-organization.md
dropshot-apis/: Cargo.toml
dropshot-apis/src/: main.rs
falcon-lab/: Cargo.toml  README.md  falcon-lab
falcon-lab/config/: cr1-bfd-frr.conf
falcon-lab/src/: bgp.rs  ddm.rs  dendrite.rs  diagnostics.rs  eos.rs  frr.rs  illumos.rs  juniper.rs  linux.rs  main.rs  mgd.rs  test.rs  topo.rs  util.rs
icmpv6/: Cargo.toml
illumos/: Cargo.toml  build.rs  wrapper.h
illumos/src/: illumos.rs  link.rs  main.rs  platform.rs  topology.rs
interop-lab/: add-images.sh  create-containers.sh  create-network.sh  destroy-network.sh  install-docker.sh  remove.sh  run-containers.sh  stop.sh
lab/: Cargo.toml
lab/src/: main.rs
lab/src/2x2/: main.rs
lab/src/duo/: main.rs
lab/src/quartet/: README.md  main.rs
lab/src/solo/: main.rs
lab/src/trio/: main.rs
mg-admin-client/: Cargo.toml  build.rs
mg-admin-client/src/: lib.rs
mg-api/: Cargo.toml
mg-api-types/: Cargo.toml
mg-api/src/: lib.rs
mg-common/: Cargo.toml
mg-common-types/: Cargo.toml
mg-common/src/: cli.rs  dpd.rs  lib.rs  log.rs  net.rs  nexus.rs  smf.rs  stats.rs  test.rs  tfport.rs  thread.rs
mg-ddm-verify/: Cargo.toml
mg-ddm-verify/src/: main.rs
mg-lower/: Cargo.toml
mg-lower/src/: ddm.rs  dendrite.rs  error.rs  lib.rs  log.rs  mrib.rs  platform.rs  test.rs
mg-types/: Cargo.toml
mgadm/: Cargo.toml
mgadm/src/: bestpath.rs  bfd.rs  bgp.rs  main.rs  mrib.rs  ndp.rs  rib.rs  static_routing.rs  unnumbered.rs
mgd/: Cargo.toml
mgd/src/: admin.rs  bfd_admin.rs  bgp_admin.rs  bgp_param.rs  error.rs  log.rs  main.rs  mrib_admin.rs  ndp_admin.rs  oxstats.rs  rib_admin.rs  signal.rs  smf.rs  static_admin.rs  unnumbered_manager.rs  validation.rs
multicast-types/: Cargo.toml
multicast-types/src/: lib.rs
ndp/: Cargo.toml
ndp/src/: lib.rs  manager.rs  packet.rs  router_discovery.rs  util.rs
openapi/: bgp-admin.json  ddm-admin.json  mg-admin.json
package/: Cargo.toml  README.md
pkg/: .gitignore  build.sh  clean.sh  maghemite.template.p5m
platform/: Cargo.toml
platform/src/: error.rs  lib.rs
rdb/: Cargo.toml
rdb-types/: Cargo.toml
rdb/proptest-regressions/: types_proptest.txt
rdb/src/: bestpath.rs  db.rs  error.rs  lib.rs  log.rs  net.rs  proptest.rs  rib.rs  test.rs  types.rs  types_proptest.rs
rdb/src/mrib/: mod.rs  rpf.rs
rift/: Cargo.toml
rift/src/: admin.rs  config.rs  error.rs  lib.rs  link.rs  rdp.rs  topology.rs
rift_protocol/: Cargo.toml
riftadm/: Cargo.toml
smf/: ddm_method_script.sh  manifest.xml  mgd_method_script.sh  refresh_ctrun_child.sh
srp/: Cargo.toml
tests/: Cargo.toml  README.md
unnumbered/: Cargo.toml
util/: Cargo.toml
xtask/: Cargo.toml
(+456 files in other folders)
