[workspace]
resolver = "2"

default-members = [
    "ddm",
    "ddmadm",
    "ddmd",
    "ddm-admin-client",
    "ddm-api",
    "ddm-types",
    "dropshot-apis",
    "bfd",
    "util",
    "mg-ddm-verify",
    "tests",
    "rdb",
    "rdb-types",
    "bgp",
    "mg-api",
    "mg-admin-client",
    "mgadm",
    "mgd",
    "mg-lower",
    "mg-common",
    "xtask",
]

members = [
    "lab",
    "ddm",
    "ddmadm",
    "ddmd",
    "ddm-admin-client",
    "ddm-api",
    "ddm-types",
    "dropshot-apis",
    "bfd",
    "package",
    "util",
    "mg-ddm-verify",
    "tests",
    "bgp",
    "mg-api",
    "mg-admin-client",
    "mgadm",
    "rdb",
    "rdb-types",
    "mgd",
    "mg-lower",
    "mg-common",
    "xtask",
]

[workspace.dependencies]
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.9"
slog-envlogger = "2.2"
slog-async = "2.8"
slog-bunyan = "2.5"
socket2 = { version = "0.5", features = ["all"] }
ispf = { git = "https://github.com/oxidecomputer/ispf" }
serde = { version = "1.0.219", features = ["derive"] }
hostname = "0.3"
thiserror = "1.0"
dropshot = { version = "0.16.4", features = [ "usdt-probes" ] }
dropshot-api-manager = "0.2.2"
dropshot-api-manager-types = "0.2.2"
schemars = { version = "0.8", features = [ "uuid1", "chrono" ] }
tokio = { version = "1.37", features = ["full"] }
serde_repr = "0.1"
anyhow = "1.0.99"
hyper = "1.7.0"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.140"
percent-encoding = "2.3.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
progenitor = "0.11"
progenitor-client = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4.5.47", features = ["derive", "unstable-styles", "env"] }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "3.0"
ztest = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
anstyle = "1.0.11"
nom = "7.1"
num_enum = "0.7.4"
pretty-hex = "0.4"
pretty_assertions = "1.4"
lazy_static = "1.4"
sled = "0.34"
camino = "1.2.0"
ciborium = "0.2.2"
http = "1.3.1"
http-body-util = "0.1"
humantime = "2.1"
rand = "0.8.5"
backoff = "0.4"
mg-api = { path = "mg-api" }
mg-common = { path = "mg-common" }
rdb-types = { path = "rdb-types" }
chrono = { version = "0.4.42", features = ["serde"] }
oxide-tokio-rt = "0.1.2"
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
oxnet = { version = "0.1.3", default-features = false, features = ["schemars", "serde"] }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
uuid = { version = "1.8", features = ["serde", "v4"] }
smf = { git = "https://github.com/illumos/smf-rs", branch = "main" }
libc = "0.2"
itertools = "0.14"
rhai = { version = "1", features = ["metadata", "sync"] }
semver = "1.0"
proptest = "1.4"
serial_test = "3.2"
ddm-api = { path = "ddm-api" }
ddm-types = { path = "ddm-types" }

[workspace.dependencies.opte-ioctl]
git = "https://github.com/oxidecomputer/opte"
rev = "3d1263ced8177893d46da54a914e4c510dc2bfc8"

[workspace.dependencies.oxide-vpc]
git = "https://github.com/oxidecomputer/opte"
rev = "3d1263ced8177893d46da54a914e4c510dc2bfc8"

[workspace.dependencies.dpd-client]
git = "https://github.com/oxidecomputer/dendrite"
branch = "main"
package = "dpd-client"
