[workspace]
resolver = "2"

default-members = [
    "ddm",
    "ddmadm",
    "ddmd",
    "ddm-admin-client",
    "ddm-api",
    "ddm-types",
    "dropshot-apis",
    "bfd",
    "util",
    "mg-ddm-verify",
    "tests",
    "rdb",
    "rdb-types",
    "bgp",
    "mg-api",
    "mg-admin-client",
    "mgadm",
    "mgd",
    "mg-lower",
    "mg-common",
    "ndp",
    "xtask",
    "falcon-lab",
]

members = [
    "lab",
    "ddm",
    "ddmadm",
    "ddmd",
    "ddm-admin-client",
    "ddm-api",
    "ddm-types",
    "dropshot-apis",
    "bfd",
    "package",
    "util",
    "mg-ddm-verify",
    "tests",
    "bgp",
    "mg-api",
    "mg-admin-client",
    "mgadm",
    "rdb",
    "rdb-types",
    "mgd",
    "mg-lower",
    "mg-common",
    "ndp",
    "xtask",
    "falcon-lab",
]

[workspace.dependencies]
# Local
mg-api = { path = "mg-api" }
mg-common = { path = "mg-common" }
rdb-types = { path = "rdb-types" }
ndp = { path = "ndp" }
bgp = { path = "bgp" }
bfd = { path = "bfd" }
mg-admin-client = { path = "mg-admin-client" }
ddm-admin-client = { path = "ddm-admin-client" }
rdb = { path = "rdb", features = ["clap"] }
ddm-api = { path = "ddm-api" }
ddm-types = { path = "ddm-types" }

# External
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.9"
slog-envlogger = "2.2"
slog-async = "2.8"
slog-bunyan = "2.5"
socket2 = { version = "0.5", features = ["all"] }
ispf = { git = "https://github.com/oxidecomputer/ispf" }
serde = { version = "1.0.228", features = ["derive"] }
hostname = "0.3"
thiserror = "1.0"
dropshot = { version = "0.16.6", features = [ "usdt-probes" ] }
dropshot-api-manager = "0.3.0"
dropshot-api-manager-types = "0.3.0"
schemars = { version = "0.8", features = [ "uuid1", "chrono" ] }
tokio = { version = "1.37", features = ["full"] }
serde_repr = "0.1"
anyhow = "1.0.100"
hyper = "1.8.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.148"
percent-encoding = "2.3.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
progenitor = "0.11"
progenitor-client = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4.5.53", features = ["derive", "unstable-styles", "env"] }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "3.0"
ztest = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
libfalcon = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
anstyle = "1.0.13"
nom = "7.1"
num_enum = "0.7.5"
pretty-hex = "0.4"
pretty_assertions = "1.4"
lazy_static = "1.4"
sled = "0.34"
camino = "1.2.2"
ciborium = "0.2.2"
http = "1.4.0"
http-body-util = "0.1"
rand = "0.8.5"
backoff = "0.4"
chrono = { version = "0.4.43", features = ["serde"] }
oxide-tokio-rt = "0.1.2"
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
oxnet = { version = "0.1.4", default-features = false, features = ["schemars", "serde"] }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
gateway-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
uuid = { version = "1.8", features = ["serde", "v4"] }
smf = { git = "https://github.com/illumos/smf-rs", branch = "main" }
libc = "0.2"
itertools = "0.14"
rhai = { version = "1", features = ["metadata", "sync"] }
semver = "1.0"
proptest = "1.4"
serial_test = "3.2"
internet-checksum = "0.2.1"
network-interface = { git = "https://github.com/oxidecomputer/network-interface", branch = "illumos" }
natord = "1.0"


[workspace.dependencies.opte-ioctl]
git = "https://github.com/oxidecomputer/opte"
rev = "e547d07b08c3f3d6c821c9eb7a958adcffce6e56"

[workspace.dependencies.oxide-vpc]
git = "https://github.com/oxidecomputer/opte"
rev = "e547d07b08c3f3d6c821c9eb7a958adcffce6e56"

[workspace.dependencies.dpd-client]
git = "https://github.com/oxidecomputer/dendrite"
rev = "37992295b5dc708d8f120cee805d67418741b556"
package = "dpd-client"
