[workspace]
resolver = "2"

default-members = [
    "client-common",
    "ddm",
    "ddmadm",
    "ddmd",
    "ddm-admin-client",
    "ddm-api",
    "ddm-api-types",
    "ddm-api-types/versions",
    "ddm-protocol",
    "dropshot-apis",
    "bfd",
    "util",
    "mg-ddm-verify",
    "tests",
    "rdb",
    "bgp",
    "mg-api",
    "mg-api-types",
    "mg-api-types/versions",
    "mg-admin-client",
    "mgadm",
    "mgd",
    "mg-lower",
    "mg-common",
    "ndp",
    "xtask",
    "falcon-lab",
]

members = [
    "client-common",
    "lab",
    "ddm",
    "ddmadm",
    "ddmd",
    "ddm-admin-client",
    "ddm-api",
    "ddm-api-types",
    "ddm-api-types/versions",
    "ddm-protocol",
    "dropshot-apis",
    "bfd",
    "package",
    "util",
    "mg-ddm-verify",
    "tests",
    "bgp",
    "mg-api",
    "mg-admin-client",
    "mgadm",
    "rdb",
    "mgd",
    "mg-lower",
    "mg-common",
    "ndp",
    "xtask",
    "falcon-lab",
]

[workspace.dependencies]
# Local
client-common = { path = "client-common" }
mg-api = { path = "mg-api" }
mg-api-types = { path = "mg-api-types" }
mg-api-types-versions = { path = "mg-api-types/versions" }
mg-common = { path = "mg-common" }
ndp = { path = "ndp" }
bgp = { path = "bgp" }
bfd = { path = "bfd" }
mg-admin-client = { path = "mg-admin-client" }
ddm-admin-client = { path = "ddm-admin-client" }
rdb = { path = "rdb", features = ["clap"] }
ddm-api = { path = "ddm-api" }
ddm-api-types = { path = "ddm-api-types" }
ddm-api-types-versions = { path = "ddm-api-types/versions" }
ddm-protocol = { path = "ddm-protocol" }

# External
slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.9"
slog-envlogger = "2.2"
slog-async = "2.8"
slog-bunyan = "2.5"
socket2 = { version = "0.6", features = ["all"] }
ispf = { git = "https://github.com/oxidecomputer/ispf" }
serde = { version = "1.0.228", features = ["derive"] }
hostname = "0.4"
thiserror = "2.0"
dropshot = { version = "0.17.0", features = [ "usdt-probes" ] }
dropshot-api-manager = "0.7.2"
dropshot-api-manager-types = "0.7.2"
expectorate = "1.2.0"
schemars = { version = "0.8.22", features = [ "uuid1", "chrono" ] }
tokio = { version = "1.49", features = ["full"] }
serde_repr = "0.1"
anyhow = "1.0.103"
hyper = "1.10.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.149"
percent-encoding = "2.3.2"
libnet = { git = "https://github.com/oxidecomputer/netadm-sys", branch = "main" }
progenitor = "0.14"
progenitor-client = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
clap = { version = "4.6.1", features = ["derive", "unstable-styles", "env"] }
tabwriter = { version = "1", features = ["ansi_formatting"] }
colored = "3.1"
ztest = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
libfalcon = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
anstyle = "1.0.14"
nom = "8.0"
num_enum = "0.7.6"
pretty-hex = "0.4"
pretty_assertions = "1.4"
lazy_static = "1.5"
sled = "0.34"
camino = "1.2.4"
ciborium = "0.2.2"
http = "1.4.0"
http-body-util = "0.1"
rand = "0.10.1"
backoff = "0.4"
chrono = { version = "0.4.44", features = ["serde"] }
oxide-tokio-rt = "0.1.5"
oximeter = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
oximeter-producer = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
oxnet = { version = "0.1.6", default-features = false, features = ["schemars", "serde"] }
omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main"}
gateway-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
uuid = { version = "1.21", features = ["serde", "v4"] }
smf = { git = "https://github.com/illumos/smf-rs", branch = "main" }
libc = "0.2"
itertools = "0.15"
rhai = { version = "1", features = ["metadata", "sync"] }
semver = "1.0"
proptest = "1.10"
serial_test = "3.3"
internet-checksum = "0.2.1"
network-interface = { git = "https://github.com/oxidecomputer/network-interface", branch = "illumos" }
natord = "1.0"
iddqd = "0.4"


[workspace.dependencies.opte-ioctl]
git = "https://github.com/oxidecomputer/opte"
rev = "8b44982bf0d3f8ea52c810b2b00425a1e350e2f8"

[workspace.dependencies.oxide-vpc]
git = "https://github.com/oxidecomputer/opte"
rev = "8b44982bf0d3f8ea52c810b2b00425a1e350e2f8"

[workspace.dependencies.dpd-client]
git = "https://github.com/oxidecomputer/dendrite"
rev = "0c92583413d48f50f87c32bac3ed9a26b6785b58"
