[package]
name = "bfd-sans-io"
version = "0.1.0"
edition = "2024"

[dependencies]
bfd.workspace = true
mg-api-types.workspace = true
rdb.workspace = true
slog.workspace = true
slog-error-chain.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest.workspace = true
test-strategy.workspace = true
