[package]
name = "bgp"
version = "0.1.0"
edition = "2021"

[dependencies]
rdb = { path = "../rdb" }
nom.workspace = true
num_enum.workspace = true
slog.workspace = true
thiserror.workspace = true
serde.workspace = true
schemars.workspace = true
sled.workspace = true
anyhow.workspace = true
mg-common.workspace = true
chrono.workspace = true
libc.workspace = true
socket2.workspace = true
rhai.workspace = true
libnet = { workspace = true, optional = true }
itertools.workspace = true
oxnet.workspace = true
uuid.workspace = true
rand.workspace = true

[dev-dependencies]
pretty-hex.workspace = true
pretty_assertions.workspace = true
lazy_static.workspace = true
proptest.workspace = true

[features]
default = ["libnet"]
