[package]
name = "bgpadm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["full"] }
clap = { version = "4.0.17", features = ["derive"] }
anyhow = "1"
slog = "2.7"
slog-term = "2.7"
slog-async = "2.7"
slog-envlogger = "2.2"
bgp = { path = "../bgp" }
bgp-admin-client = { path = "../bgp-admin-client" }
