[package]
name = "bgpd"
version = "0.1.0"
edition = "2021"

[dependencies]
bgp = { version = "0.1.0", path = "../bgp" }
rdb = { path = "../rdb" }
clap.workspace = true
colored.workspace = true
dropshot.workspace = true
schemars.workspace = true
serde.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-term.workspace = true
tokio.workspace = true
