[package]
name = "ddm-api"
version = "0.1.0"
edition = "2024"

[dependencies]
ddm-api-types-versions.workspace = true
dropshot.workspace = true
dropshot-api-manager-types.workspace = true
ddm-api-types.workspace = true
oxnet.workspace = true
schemars.workspace = true
serde.workspace = true
uuid.workspace = true
