[package]
name = "ddm"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions.workspace = true

[dependencies]
slog.workspace = true
socket2.workspace = true
ispf.workspace = true
serde.workspace = true
hostname.workspace = true
thiserror.workspace = true
dropshot.workspace = true
schemars.workspace = true
tokio.workspace = true
anyhow.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde_json.workspace = true
libnet.workspace = true
dpd-client.workspace = true
opte-ioctl.workspace = true
oxide-vpc.workspace = true
sled.workspace = true
mg-common.workspace = true
chrono.workspace = true
omicron-common.workspace = true
oximeter.workspace = true
oximeter-producer.workspace = true
oxnet.workspace = true
uuid.workspace = true
reqwest.workspace = true
semver.workspace = true
ddm-api.workspace = true
ddm-types.workspace = true
