[package]
name = "ddm"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"

[dependencies]
slog.workspace = true
socket2.workspace = true
ispf.workspace = true
serde.workspace = true
hostname.workspace = true
thiserror.workspace = true
dropshot.workspace = true
schemars.workspace = true
tokio.workspace = true
anyhow.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde_json.workspace = true
sled.workspace = true
mg-common.workspace = true
chrono.workspace = true
omicron-common.workspace = true
oximeter.workspace = true
oximeter-producer.workspace = true
oxnet.workspace = true
uuid.workspace = true
ddm-api.workspace = true
ddm-types.workspace = true
ddm-types-versions.workspace = true

# illumos-only deps used by the routing state machine and platform sys layer.
# Gated by the `illumos` feature so non-illumos builds (e.g. Linux test
# fixtures running ddmd with `--no-state-machine`) link cleanly.
libnet = { workspace = true, optional = true }
dpd-client = { workspace = true, optional = true }
opte-ioctl = { workspace = true, optional = true }
oxide-vpc = { workspace = true, optional = true }

[features]
default = ["illumos"]
illumos = ["dep:libnet", "dep:dpd-client", "dep:opte-ioctl", "dep:oxide-vpc"]
