[package]
name = "ddm"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
expectorate.workspace = true

[dependencies]
slog.workspace = true
socket2.workspace = true
ispf.workspace = true
serde.workspace = true
hostname.workspace = true
thiserror.workspace = true
dropshot.workspace = true
schemars.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde_json.workspace = true
sled.workspace = true
mg-common.workspace = true
ddm-api-types.workspace = true
ddm-api-types-versions.workspace = true
ddm-protocol.workspace = true
chrono.workspace = true
omicron-common.workspace = true
oximeter.workspace = true
oximeter-producer.workspace = true
oxnet.workspace = true
uuid.workspace = true
ddm-api.workspace = true

# illumos-only deps used by the routing state machine and platform sys layer.
# Gated by the `backend` feature so stub builds (e.g. Linux test fixtures
# running `ddmd` with `--api-only`) link cleanly.
libnet = { workspace = true, optional = true }
dpd-client = { workspace = true, optional = true }
opte-ioctl = { workspace = true, optional = true }
oxide-vpc = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["backend"]
backend = ["dep:libnet", "dep:dpd-client", "dep:opte-ioctl", "dep:oxide-vpc", "dep:reqwest"]
