[package]
name = "ddmadm"
version = "0.1.0"
edition = "2021"

[dependencies]
ddm = { path = "../ddm" }
mg-common = { path = "../mg-common" }
ddm-admin-client = { path = "../ddm-admin-client" }
anstyle.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
oxide-tokio-rt.workspace = true
oxnet.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-term.workspace = true
slog.workspace = true
tabwriter.workspace = true
tokio.workspace = true
