[package]
name = "ddmd"
version = "0.1.0"
edition = "2024"

[dependencies]
ddm = { path = "../ddm" }
mg-common = { path = "../mg-common" }
anyhow.workspace = true
clap.workspace = true
ddm-types.workspace = true
oxide-tokio-rt.workspace = true
slog.workspace = true
slog-bunyan.workspace = true
slog-async.workspace = true
tokio.workspace = true
hostname.workspace = true
dpd-client.workspace = true
anstyle.workspace = true
uuid.workspace = true
smf.workspace = true
