[package]
name = "maghemite-dropshot-apis"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
ddm-api.workspace = true
dropshot-api-manager-types.workspace = true
dropshot-api-manager.workspace = true
mg-api.workspace = true
semver.workspace = true
