[package]
name = "falcon-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
libfalcon.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
mg-admin-client.workspace = true
ddm-admin-client.workspace = true
tokio.workspace = true
slog.workspace = true
dpd-client.workspace = true
clap.workspace = true
oxnet.workspace = true
oxide-tokio-rt.workspace = true
bgp.workspace = true
colored.workspace = true
rdb-types.workspace = true
