[package]
name = "illumos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform = { path = "../platform" }
rift = { path = "../rift" }
rift_protocol = { path = "../rift_protocol" }
slog = "2.7"
slog-term = "2.7"
slog-async = "2.7"
socket2 = { version = "0.4", features = ["all"] }
icmpv6 = { path = "../icmpv6" }
tokio = { version = "1.0", features = ["full"] }
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[build-dependencies]
bindgen = "0.59"
