[package]
name = "mg-illumos"
version = "0.1.0"
edition = "2018"

[dependencies]
platform = { path = "../platform" }
rift = { path = "../rift" }
rift_protocol = { path = "../rift_protocol" }
slog = "2.7"
slog-term = "2.7"
slog-async = "2.7"
slog-envlogger = "2.2"
socket2 = { version = "0.4", features = ["all"] }
icmpv6 = { path = "../icmpv6" }
tokio = { version = "1.0", features = ["full"] }
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
netadm-sys = { git = "ssh://git@github.com/oxidecomputer/netadm-sys", branch = "routing" }
clap = { version = "3.0.0-beta.4", features = ["color"] }
serde_json = "1"

# need https://github.com/hyperium/hyper/pull/2664
hyper = { git = "https://github.com/hyperium/hyper", branch = "master", features = ["full"] }

[build-dependencies]
bindgen = "0.59"
