[package]
name = "lab"
version = "0.1.0"
edition = "2018"

[dependencies]
libfalcon = { path = "/home/ry/src/falcon/lib" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "duo"
path = "src/duo/main.rs"

[[bin]]
name = "trio"
path = "src/trio/main.rs"

[[bin]]
name = "quartet"
path = "src/quartet/main.rs"

[[bin]]
name = "mg2x2"
path = "src/2x2/main.rs"
