[package]
name = "lab"
version = "0.1.0"
edition = "2024"

[dependencies]
libfalcon = { git = "https://github.com/oxidecomputer/falcon", branch = "main" }
oxide-tokio-rt.workspace = true

[[bin]]
name = "solo"
path = "src/solo/main.rs"

[[bin]]
name = "duo"
path = "src/duo/main.rs"

[[bin]]
name = "trio"
path = "src/trio/main.rs"

[[bin]]
name = "quartet"
path = "src/quartet/main.rs"

[[bin]]
name = "mg2x2"
path = "src/2x2/main.rs"
