[package]
name = "mg-admin-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
anyhow.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
progenitor.workspace = true
schemars.workspace = true
chrono.workspace = true
uuid.workspace = true
mg-common.workspace = true
rdb = { version = "0.1.0", path = "../rdb" }
tabwriter.workspace = true
colored.workspace = true
