[package]
name = "mg-admin-client"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["chrono", "serde", "serde_json", "uuid"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
reqwest.workspace = true
progenitor.workspace = true
schemars.workspace = true
chrono.workspace = true
uuid.workspace = true
rdb-types.workspace = true
bgp.workspace = true
tabwriter.workspace = true
colored.workspace = true
