[package]
name = "mg-common"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
anstyle.workspace = true
serde.workspace = true
schemars.workspace = true
thiserror.workspace = true
slog.workspace = true
omicron-common.workspace = true
internal-dns.workspace = true
tokio.workspace = true
oximeter-producer.workspace = true
oximeter.workspace = true
backoff.workspace = true
