[package]
name = "mg-common"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
anyhow.workspace = true
anstyle.workspace = true
serde.workspace = true
schemars.workspace = true
slog.workspace = true
slog-bunyan.workspace = true
slog-async.workspace = true
oximeter-producer.workspace = true
oximeter.workspace = true
oxnet.workspace = true
backoff.workspace = true
smf.workspace = true
uuid.workspace = true
libc.workspace = true

# We need this on illumos, but must omit it on other platforms
[target.'cfg(target_os = "illumos")'.dependencies.libnet]
workspace = true
optional = true

[features]
default = ["libnet"]
libnet = ["dep:libnet"]
