[package]
name = "mg-ddm-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
oxide-tokio-rt.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ddm = { version = "0.1.0", path = "../ddm" }
oxnet.workspace = true
