[package]
name = "mg-lower"
version = "0.1.0"
edition = "2021"

[dependencies]
ddm-admin-client = { path = "../ddm-admin-client" }
rdb = { path = "../rdb" }
anyhow.workspace = true
dpd-client.workspace = true
dendrite-common.workspace = true
slog.workspace = true
libnet.workspace = true
tokio.workspace = true
thiserror.workspace = true
http.workspace = true
mg-common.workspace = true
