[package]
name = "mg-lower"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
util  = { path = "../util" }

[dependencies]
ddm-admin-client = { path = "../ddm-admin-client" }
rdb = { path = "../rdb" }
dpd-client.workspace = true
slog.workspace = true
libnet.workspace = true
tokio.workspace = true
thiserror.workspace = true
mg-common.workspace = true
oxnet.workspace = true
reqwest.workspace = true
progenitor-client.workspace = true
