[package]
name = "mg-lower"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
util  = { path = "../util" }
uuid.workspace = true

[dependencies]
ddm-admin-client = { path = "../ddm-admin-client" }
rdb = { path = "../rdb" }
dpd-client.workspace = true
slog.workspace = true
tokio.workspace = true
thiserror.workspace = true
mg-common.workspace = true
oxnet.workspace = true
reqwest.workspace = true
progenitor-client.workspace = true

# libnet links against illumos-specific system libraries (kstat, nvpair,
# zfs, dlpi) that are not available on other platforms.
[target.'cfg(target_os = "illumos")'.dependencies]
libnet.workspace = true
