[package]
name = "mgadm"
version = "0.1.0"
edition = "2024"

[dependencies]
bgp = { path = "../bgp", features = ["clap"] }
mg-common = { path = "../mg-common" }
mg-admin-client = { path = "../mg-admin-client" }
clap.workspace = true
anyhow.workspace = true
oxide-tokio-rt.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
colored.workspace = true
humantime.workspace = true
serde_json.workspace = true
oxnet.workspace = true
tabwriter.workspace = true
rdb = { version = "0.1.0", path = "../rdb", features = ["clap"] }
