[package]
name = "mgadm"
version = "0.1.0"
edition = "2024"

[dependencies]
bgp = { workspace = true, features = ["clap"] }
mg-common.workspace = true
mg-admin-client.workspace = true
clap.workspace = true
anyhow.workspace = true
oxide-tokio-rt.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
colored.workspace = true
humantime.workspace = true
serde_json.workspace = true
oxnet.workspace = true
tabwriter.workspace = true
rdb.workspace = true
