[package]
name = "mgd"
version = "0.1.0"
edition = "2021"

[dependencies]
mg-lower = { path = "../mg-lower", optional = true }
mg-common = { path = "../mg-common", default-features = false}
bfd = { path = "../bfd" }
bgp = { path = "../bgp" }
rdb = { path = "../rdb" }
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
dropshot.workspace = true
schemars.workspace = true
serde.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-term.workspace = true
tokio.workspace = true
http.workspace = true
thiserror.workspace = true
rand.workspace = true
oximeter.workspace = true
oximeter-producer.workspace = true
chrono.workspace = true
omicron-common.workspace = true
hostname.workspace = true
uuid.workspace = true
smf.workspace = true

[features]
default = ["mg-lower"]
mg-lower = ["dep:mg-lower"]
