[package]
name = "mgd"
version = "0.1.0"
edition = "2024"

[dependencies]
mg-api.workspace = true
mg-lower = { path = "../mg-lower", optional = true }
mg-common = { path = "../mg-common", default-features = false}
bfd = { path = "../bfd" }
bgp = { path = "../bgp" }
rdb = { path = "../rdb" }
anyhow.workspace = true
clap.workspace = true
slog.workspace = true
dropshot.workspace = true
tokio.workspace = true
http.workspace = true
thiserror.workspace = true
rand.workspace = true
oxide-tokio-rt.workspace = true
oximeter.workspace = true
oximeter-producer.workspace = true
chrono.workspace = true
omicron-common.workspace = true
hostname.workspace = true
uuid.workspace = true
smf.workspace = true
gateway-client.workspace = true

[dev-dependencies]
tempfile = "3"
proptest.workspace = true

[features]
default = ["mg-lower"]
mg-lower = ["dep:mg-lower"]
