[package]
name = "mgd"
version = "0.1.0"
edition = "2024"

[dependencies]
client-common.workspace = true
mg-lower = { path = "../mg-lower", optional = true }
mg-api.workspace = true
mg-api-types.workspace = true
mg-api-types-versions.workspace = true
oxnet.workspace = true
mg-common.workspace = true
bfd.workspace = true
bgp.workspace = true
rdb.workspace = true
anyhow.workspace = true
camino.workspace = true
port-file.workspace = true
clap.workspace = true
slog.workspace = true
slog-error-chain.workspace = true
dropshot.workspace = true
tokio.workspace = true
http.workspace = true
thiserror.workspace = true
rand.workspace = true
oxide-tokio-rt.workspace = true
oximeter.workspace = true
oximeter-producer.workspace = true
chrono.workspace = true
omicron-common.workspace = true
hostname.workspace = true
uuid.workspace = true
smf.workspace = true
gateway-client.workspace = true
ndp.workspace = true
network-interface.workspace = true
socket2.workspace = true
unnumbered.workspace = true

[dev-dependencies]
tempfile = "3"
proptest.workspace = true

[features]
default = ["mg-lower"]
mg-lower = ["dep:mg-lower"]
